--- a/parts/appwizard/kdevpartjava/Makefile.am
+++ b/parts/appwizard/kdevpartjava/Makefile.am
@@ -20,3 +20,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kdevpartjavadir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kdevpartjavadir)/script
+	rm script.local
