--- a/parts/appwizard/kofficepart/Makefile.am
+++ b/parts/appwizard/kofficepart/Makefile.am
@@ -21,3 +21,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kopartdir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kopartdir)/script
+	rm script.local
