--- a/parts/appwizard/dcopservice/Makefile.am
+++ b/parts/appwizard/dcopservice/Makefile.am
@@ -20,3 +20,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(dcopservicedir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(dcopservicedir)/script
+	rm script.local
