--- a/parts/appwizard/gnomeapp/Makefile.am
+++ b/parts/appwizard/gnomeapp/Makefile.am
@@ -19,3 +19,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(gnomeappdir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(gnomeappdir)/script
+	rm script.local
