--- a/parts/appwizard/kcmodule/Makefile.am
+++ b/parts/appwizard/kcmodule/Makefile.am
@@ -19,3 +19,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kcmoduledir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kcmoduledir)/script
+	rm script.local
