--- a/parts/appwizard/khello/Makefile.am
+++ b/parts/appwizard/khello/Makefile.am
@@ -19,3 +19,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(khellodir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(khellodir)/script
+	rm script.local
