--- a/parts/appwizard/kioslave/Makefile.am
+++ b/parts/appwizard/kioslave/Makefile.am
@@ -19,3 +19,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kioslavedir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kioslavedir)/script
+	rm script.local
