--- a/parts/appwizard/kpartapp/Makefile.am
+++ b/parts/appwizard/kpartapp/Makefile.am
@@ -19,3 +19,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kpartappdir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kpartappdir)/script
+	rm script.local
