--- a/parts/appwizard/kpartplugin/Makefile.am
+++ b/parts/appwizard/kpartplugin/Makefile.am
@@ -20,3 +20,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kpartplugindir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kpartplugindir)/script
+	rm script.local
