--- a/parts/appwizard/kscreensaver/Makefile.am
+++ b/parts/appwizard/kscreensaver/Makefile.am
@@ -20,3 +20,4 @@ script.local: ${srcdir}/script
 install-data-local: script.local
 	$(mkinstalldirs) $(DESTDIR)$(kscreensaverdir)
 	$(INSTALL_DATA) script.local $(DESTDIR)$(kscreensaverdir)/script
+	rm script.local
