--- a/parts/cppsupport/Makefile.am
+++ b/parts/cppsupport/Makefile.am
@@ -8,15 +8,10 @@ kde_module_LTLIBRARIES = libkdevcppsupport.la
 libkdevcppsupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
 libkdevcppsupport_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevcppsupport_la_SOURCES = cppsupportpart.cpp cppsupportwidget.cpp classparser.cpp tokenizer.cpp ccconfigwidget.cpp ccconfigwidgetbase.ui cppnewclassdlgbase.ui cppnewclassdlg.cpp cppaddmethoddlg.cpp cppaddmethoddlgbase.ui cclonefunctiondlg.cpp addclassattributedlg.cpp cppcodecompletion.cpp simpleparser.cpp kdevregexp.cpp problemreporter.cpp driver.cpp errors.cpp lexer.cpp parser.cpp ast.cpp configproblemreporter.ui backgroundparser.cpp implementmethodsdialog.ui implementmethodsdialog.ui.h cppsupport_events.h ast_utils.h ast_utils.cpp tree_parser.h tree_parser.cpp store_walker.h store_walker.cpp parser.h realtime_classbrowser.h realtime_classbrowser.cpp subclassingdlg.cpp subclassingdlgbase.ui
+libkdevcppsupport_la_SOURCES = cppsupportpart.cpp cppsupportwidget.cpp ccconfigwidget.cpp ccconfigwidgetbase.ui cppnewclassdlgbase.ui cppnewclassdlg.cpp cppaddmethoddlg.cpp cppaddmethoddlgbase.ui cclonefunctiondlg.cpp addclassattributedlg.cpp cppcodecompletion.cpp simpleparser.cpp kdevregexp.cpp problemreporter.cpp driver.cpp errors.cpp lexer.cpp parser.cpp ast.cpp configproblemreporter.ui backgroundparser.cpp implementmethodsdialog.ui implementmethodsdialog.ui.h cppsupport_events.h ast_utils.h ast_utils.cpp tree_parser.h tree_parser.cpp store_walker.h store_walker.cpp parser.h realtime_classbrowser.h realtime_classbrowser.cpp subclassingdlg.cpp subclassingdlgbase.ui
 
-EXTRA_DIST = tokenizer.l
-DISTCLEANFILES = tokenizer.cpp
-
-tokenizer.cpp: tokenizer.l
-	flex -+ -otokenizer.cpp $(srcdir)/tokenizer.l && cat tokenizer.cpp | \
-	sed -e "s,class istream;,#include <iostream\.h>," > tokenizer.cpp.tmp && \
-	mv tokenizer.cpp.tmp tokenizer.cpp
+EXTRA_DIST =
+DISTCLEANFILES =
 
 METASOURCES = AUTO
 
