--- a/doc/extras/Makefile.am
+++ b/doc/extras/Makefile.am
@@ -1,5 +1,5 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = gnustep.toc gtk.toc perl.toc php.toc python.toc 
+toc_DATA = gnustep.toc gtk.toc perl.toc php.toc python.toc svg.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = php.index python.index
