install into the right directory

--- a/parts/buglist/Makefile.am
+++ b/parts/buglist/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
-lib_LTLIBRARIES = libkdevbuglist.la
+kde_module_LTLIBRARIES = libkdevbuglist.la
 libkdevbuglist_la_LDFLAGS = $(all_libraries) -version-info 1:0 $(KDE_PLUGIN)
 libkdevbuglist_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
