create the Factory and the Menu entry

--- a/parts/buglist/kdevbuglist.desktop
+++ b/parts/buglist/kdevbuglist.desktop
@@ -3,8 +3,8 @@ Encoding=UTF-8
 Comment=Bug Tracking Application
 Exec=blubb
 Icon=find
-Name=BugList
-ServiceTypes=KDevelop/Component
+Name=KDevBugList
+ServiceTypes=KDevelop/Plugin
 Type=Service
 X-KDE-Library=libkdevbuglist
 X-KDevelop-Scope=Global
