--- a/parts/buglist/kdevbuglist.rc
+++ b/parts/buglist/kdevbuglist.rc
@@ -1,7 +1,7 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="BugList" version="1">
+<kpartgui name="KDevBugList" version="2">
 <MenuBar>
- <Menu name="project">
+ <Menu name="tools">
   <Action name="bug_tracking"/>
  </Menu>
 </MenuBar>
