--- a/lib/project/Makefile.am
+++ b/lib/project/Makefile.am
@@ -6,10 +6,6 @@ INCLUDES = -I$(top_srcdir)/lib/util $(all_includes)
 
 noinst_LTLIBRARIES = libkdevproject.la
 
-libkdevproject_la_SOURCES = runoptionswidget.cpp \
-			    runoptionswidgetbase.ui \
-			    makeoptionswidget.cpp \
-			    makeoptionswidgetbase.ui \
-			    addenvvardlg.cpp
+libkdevproject_la_SOURCES = runoptionswidget.cpp runoptionswidgetbase.ui makeoptionswidget.cpp makeoptionswidgetbase.ui addenvvardlg.cpp subclassesdlgbase.ui subclassesdlg.cpp subclassesdlg.h
 
 METASOURCES = AUTO
