--- a/doc/extras/w3c/Makefile.am
+++ b/doc/extras/w3c/Makefile.am
@@ -1,3 +1,3 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = w3c-dom-level2-html.toc w3c-svg.toc
+toc_DATA = w3c-dom-level2-html.toc w3c-svg.toc w3c-uaag10
 
