--- a/parts/history/kdevhistory.desktop
+++ b/parts/history/kdevhistory.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=History
-Name=KDevOpenWith
+Name=KDevHistory
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevhistory
