--- a/lib/qextmdi/include/Makefile.am
+++ b/lib/qextmdi/include/Makefile.am
@@ -1,2 +1,2 @@
 noinst_HEADERS = qextmdichildarea.h qextmdichildfrm.h qextmdichildfrmcaption.h qextmdidefines.h qextmdiiterator.h qextmdilistiterator.h \
-           qextmdimainfrm.h qextmdinulliterator.h qextmditaskbar.h
+           qextmdimainfrm.h qextmdinulliterator.h qextmditaskbar.h qextmdichildview.h
