--- a/parts/filecreate/kdevpart_filecreate.rc
+++ b/parts/filecreate/kdevpart_filecreate.rc
@@ -2,10 +2,10 @@
 <kpartplugin name="filecreate" library="libfilecreateplugin" version="1">
 <MenuBar>
  <Menu name="file">
-    <Action name="file_new"/>
+    <Action name="file_new" group="new_merge" />
  </Menu>
 </MenuBar>
 <ToolBar name="mainToolBar">
-  <Action name="file_new"/>
+  <Action name="file_new" group="file_operations" />
 </ToolBar>
 </kpartplugin>
