removed astyleconfig.h from Makefile.am

--- a/parts/astyle/Makefile.am
+++ b/parts/astyle/Makefile.am
@@ -5,7 +5,7 @@ libkdevastyle_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevastyle_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevastyle_la_SOURCES = astyle_part.cpp ASBeautifier.cpp ASFormatter.cpp ASResource.cpp astyleconfig.ui astyle_widget.cpp astyle_adaptor.cpp \
-	astyle.h  astyle_adaptor.h  astyle_part.h  astyle_widget.h  astyleconfig.h  compiler_defines.h
+	astyle.h  astyle_adaptor.h  astyle_part.h  astyle_widget.h  compiler_defines.h
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
