--- a/parts/abbrev/kdevabbrev.rc
+++ b/parts/abbrev/kdevabbrev.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevCTags" version="1">
+<kpartgui name="KDevAbbrevPart" version="1">
 <MenuBar>
   <Menu name="edit" >
     <Action name="edit_expandtext"/>
