--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -2,8 +2,8 @@
 <kpartgui version="6" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
-    <Action name="file_new"/>
     <DefineGroup name="new_merge"/>
+    <Separator/>
     <Action name="file_open"/>
     <Action name="file_open_recent"/>
     <DefineGroup name="open_merge"/>
