--- a/parts/appwizard/kdevpart/src-Makefile.am
+++ b/parts/appwizard/kdevpart/src-Makefile.am
@@ -1,8 +1,7 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
+INCLUDES = $(all_includes)
 
 kde_module_LTLIBRARIES = libkdev$APPNAMELC$.la
-libkdev$APPNAMELC$_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdev$APPNAMELC$_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
+libkdev$APPNAMELC$_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN) -lkdevelop
 
 libkdev$APPNAMELC$_la_SOURCES = $APPNAMELC$_part.cpp $APPNAMELC$_widget.cpp
 
