--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -2,7 +2,7 @@
 # Here resides the app wizard part.
 
 SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava javahello kcmodule kicker kioslave \
-	  kdevpart pythonhello pyqt phphello chello cpphello gnomeapp kscreensaver \
+	  kdevpart kdevpart2 pythonhello pyqt phphello chello cpphello gnomeapp kscreensaver \
 	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp khello kateplugin qtopiaapp
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
