--- a/parts/cppsupport/kdevcppsupport.rc
+++ b/parts/cppsupport/kdevcppsupport.rc
@@ -12,7 +12,7 @@
  </Menu>
 </MenuBar>
 <ToolBar name="browserToolBar" position="Top" iconText="IconOnly" >
-  <text>Build Toolbar</text>
+  <text>Browser Toolbar</text>
   <Action name="project_newclass"/>
   <Separator />
 </ToolBar>
