--- a/parts/appwizard/common/Makefile.am
+++ b/parts/appwizard/common/Makefile.am
@@ -22,7 +22,7 @@ commondatadir = ${appwizarddatadir}/template-common
 commondata_DATA = gideon.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz \
 		  kde-app.lsm kde-Makefile.am kde-Makefile.cvs kde-configure.in.in \
 		  kde-index.docbook kde-po-Makefile.am kde-doc-Makefile.am kde-doc-en-Makefile.am \
-		  lo16-app-app.png lo32-app-app.png kde-app.desktop kde-part.desktop \
+		  hi16-app-app.png hi32-app-app.png kde-app.desktop kde-part.desktop \
 		  gnome-app.lsm gnome-Makefile.am gnome-Makefile.cvs \
 		  gnome-pixmaps-Makefile.am gnome-app.png \
 		  COPYING COPYING.LIB LICENSE.QPL LICENSE.BSD Artistic
