- better parsing of expressions - added "r++"  a small program that is useful to test the parser status

--- a/parts/cppsupport/Makefile.am
+++ b/parts/cppsupport/Makefile.am
@@ -26,3 +26,8 @@ template_DATA = cpptemplates
 AM_CFLAGS =
 AM_CXXFLAGS = -DAST_DEBUG
 AM_FFLAGS =
+bin_PROGRAMS =  r++
+r___LDFLAGS = $(all_libraries)
+r___SOURCES = main.cpp
+r___DEPENDENCIES = libkdevcppsupport.la
+r___LDADD = libkdevcppsupport.la
