- improved KDevPlugin, added new methods like icon(), pluginName(), dcopClient()   and part()   (the code is based on Kontact plugin interface)
- updated all plugins

- added DCOP interfaces for FilterPart and CppSupportPart..
  for instance, now you can create a new class using bash with the command

    dcop gideon-$PID$ KDevCppSupport addClass

--- a/parts/filter/Makefile.am
+++ b/parts/filter/Makefile.am
@@ -8,9 +8,7 @@ kde_module_LTLIBRARIES = libkdevfilter.la
 libkdevfilter_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfilter_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevfilter_la_SOURCES = filterpart.cpp \
-			   shellfilterdlg.cpp \
-			   shellinsertdlg.cpp
+libkdevfilter_la_SOURCES = filterpart.cpp 			   shellfilterdlg.cpp 			   shellinsertdlg.cpp kdevfilteriface.h kdevfilteriface.cpp kdevfilteriface.skel
 
 METASOURCES = AUTO
 
