--- a/parts/filecreate/file-templates/Makefile.am
+++ b/parts/filecreate/file-templates/Makefile.am
@@ -1,3 +1,3 @@
 
 rcdir = $(kde_datadir)/kdevfilecreate/file-templates
-rc_DATA = py ui ui-dialog ui-mainwin h cpp ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard c java php f f77
+rc_DATA = py ui ui-dialog ui-mainwin h cpp ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard c java php F f f77 f90 f95 for ftn
