- bugfix - made knotes works with kde 3.1

--- a/parts/knotes/kdevpart_notes.desktop
+++ b/parts/knotes/kdevpart_notes.desktop
@@ -1,36 +1,8 @@
 [Desktop Entry]
 Type=Service
 Exec=blubb
-Comment=KDevelop KNotes Plugin
-Comment[be]=Дапаўненьне Кантакту "K Нататкі"
-Comment[es]=Plugin de KNotes para KDevelop
-Comment[hu]=KDevelop KNotes-bővítőmodul
-Comment[sv]=KDevelop Knotes-insticksdelprogram
-Name=KNotesPlugin
-Name[be]=Дапаўненьне "K Нататкі"
-Name[bg]=Plugin за KNotes
-Name[cs]=Modul poznámek
-Name[de]=KNotes-Plugin
-Name[el]=KNotes πρόσθετο
-Name[eo]=Notoj-kromaĵo
-Name[fr]=module de KNotes
-Name[he]=תוסף KNotes
-Name[hr]=KNotesUmetak
-Name[hu]=KNotes-modul
-Name[it]=Plugin KNotes
-Name[ja]=KNotesプラグイン
-Name[lt]=KNotes priedas
-Name[nb]=KNotes-programtillegg
-Name[nl]=KNotes-plugin
-Name[nn]=KNotes-programtillegg
-Name[nso]=Plugin ya KDitshwao
-Name[pl]=Wtyczka Żółtych karteczek
-Name[pt_BR]=plugin do Knotes
-Name[ru]=Модуль для заметок
-Name[sk]=KNotesModul
-Name[sv]=Knotes-insticksprogram
-Name[tr]=KNotes Eklentisi
-Name[zh_CN]=KNotes 插件
+Comment=KNotes Plugin
+Name=KDevNotes
 Icon=knotes
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevnotes
