--- a/parts/appwizard/fortranhello/src-Makefile.am
+++ b/parts/appwizard/fortranhello/src-Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = $APPNAMELC$
-$APPNAMELC$_SOURCES = $APPNAMELC$.f77
+$APPNAMELC$_SOURCES = $APPNAMELC$.f
 
 # set the include path found by configure
 INCLUDES= $(all_includes)
