Applied patch from Luc Willems <Willems.luc@pandora.be>: significant changes in perlsupport.

--- a/lib/sourceinfo/Makefile.am
+++ b/lib/sourceinfo/Makefile.am
@@ -6,7 +6,8 @@ libkdevsourceinfo_la_SOURCES = classstore.cpp parsedclass.cpp parsedmethod.cpp \
 			       parsedattribute.cpp parsedargument.cpp parsedparent.cpp \
 			       classtreenode.cpp parsedcontainer.cpp \
 			       parsedclasscontainer.cpp parseditem.cpp parsedscopecontainer.cpp \
-			       ClassStoreIface.skel ClassStoreIface.cpp
+			       ClassStoreIface.skel ClassStoreIface.cpp \
+			       parsedscript.cpp
 
 #noinst_HEADERs = classstore.h parsedclass.h parsedmethod.h \
 #		 parsedattribute.h parsedargument.h parsedparent.h parsedsignalslot.h \
