Patch by: Jens Dagerbo <jens.dagerbo@swipnet.se> aka teatime - Added search options (case sensitive, whole words, regexps) - Now works on editor buffers for open files - undo history maintained - Now only works on project files - Plugin moved to from global to project scope - Added "subpath" - for searching in large projects

--- a/parts/replace/kdevpart_replace.desktop
+++ b/parts/replace/kdevpart_replace.desktop
@@ -6,5 +6,5 @@ Comment=Project wide string replacement
 Name=KDevreplace
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
-X-KDevelop-Scope=Global
+X-KDevelop-Scope=Project
 X-KDE-Library=libkdevreplace
