--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevcvs.la
 libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la $(top_builddir)/lib/interfaces/libkdevinterfaces.la
 
-libkdevcvs_la_SOURCES = cvspart.cpp commitdlg.cpp logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsoptionswidget.h cvswidget.cpp cvswidget.h
+libkdevcvs_la_SOURCES = cvspart.cpp commitdlg.cpp commitdlg.h logform.ui cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsoptionswidget.h cvswidget.cpp cvswidget.h
 
 METASOURCES = AUTO
 
