--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -9,7 +9,7 @@
 SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
 	  autoproject scriptproject trollproject customproject \
-	  cvs perforce antproject diff valgrind \
+	  cvs perforce clearcase antproject diff valgrind \
 	  debugger distpart konsole astyle tools ctags regexptest doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith history filecreate \
