corrected some envvar names

--- a/parts/cppsupport/newclass_templates/Makefile.am
+++ b/parts/cppsupport/newclass_templates/Makefile.am
@@ -1,4 +1,4 @@
 cppsupportdatadir = ${kde_datadir}/kdevcppsupport
-subclassingdir = ${cppsupportdatadir}/newclass
+newclassdir = ${cppsupportdatadir}/newclass
 
-subclassing_DATA = cpp_header  cpp_source  gtk_header  gtk_source  objc_header  objc_source
+newclass_DATA = cpp_header  cpp_source  gtk_header  gtk_source  objc_header  objc_source
