Microsoft HTML Help part and kioslave for viewing html files added. Integration with doctreeview is coming.

--- a/parts/doctreeview/Makefile.am
+++ b/parts/doctreeview/Makefile.am
@@ -1,6 +1,6 @@
 # Here resides the doc tree view part.
 
-SUBDIRS = data
+SUBDIRS = data chm
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
