compile the catalog too

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -15,5 +15,5 @@ libkdevelop_la_LIBADD = $(top_builddir)/lib/interfaces/libkdevinterfaces.la \
 libkdevelop_la_SOURCES = dummy.cpp
 
 
-SUBDIRS = interfaces sourceinfo util project widgets qextmdi antlr structure
+SUBDIRS = interfaces sourceinfo util project widgets qextmdi antlr structure catalog
 
