added check for Berkeley DB >= 3

--- a/configure.in.in
+++ b/configure.in.in
@@ -8,6 +8,7 @@ KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
 KDEV_CHECK_SVN
 KDEV_CHECK_QEDITOR
+KDEV_CHECK_BDB
 #KDEV_PATH_PYTHONDOCDIR
 #KDEV_PATH_PHPDOCDIR
 #KDEV_PATH_GNUSTEPDOCDIR
