--- a/parts/classview/Makefile.am
+++ b/parts/classview/Makefile.am
@@ -2,6 +2,7 @@
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces \
 	   -I$(top_srcdir)/lib/sourceinfo \
+	   -I$(top_srcdir)/lib/compat \
 	   -I$(top_srcdir)/lib/util \
 	   $(all_includes)
 
