Added KTextEditor::ConfigInterface to QEditor and implemented needed parts. Changed the name of the action that opens the configuration dialog in qeditor_part.rc to match the name in katepartui.rc.

--- a/parts/qeditor/qeditor_part.rc
+++ b/parts/qeditor/qeditor_part.rc
@@ -28,7 +28,7 @@
   </Menu>
 
   <Menu name="settings" noMerge="1"><text>&amp;Settings</text>
-    <Action name="settings_configure_editor" group="configure_merge"/>
+    <Action name="set_confdlg" group="configure_merge" />
   </Menu>
 </MenuBar>
 
