Added code to make changed editor settings apply to all open editors. The nasty part is finding the automerged menu entry of the active editor part and removing it. If anyone can come up with a better way, please do!
<caleb> wow, that's a hack :)

--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -103,6 +103,7 @@
     <Action name="settings_configure_shortcuts" />
     <Action name="settings_configure_toolbars" />
     <Action name="settings_configure_notifications" />
+    <Action name="settings_configure_editors" />
     <Action name="settings_configure" />
     <DefineGroup name="configure_merge" />
   </Menu>
