--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -5,7 +5,7 @@ SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava javahello kcmodule
 	  kdevpart kdevpart2 pythonhello pyqt phphello chello cpphello gnomeapp kscreensaver \
 	  kofficepart chello_gba dcopservice konqnavpanel qmakesimple qmakeapp khello kateplugin qtopiaapp fortranhello \
 	  kdedcop \
-	  perlhello rubyhello bashhello pascalhello
+	  perlhello rubyhello bashhello pascalhello fpcsharedlib fpchello fpcgtk
       
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
